--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-dashboard-pro-react",
+  "name": "multichanneloms",
   "version": "1.9.0",
   "private": true,
   "dependencies": {
