--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@material-ui/core": "4.9.14",
     "@material-ui/icons": "4.9.1",
+    "axios": "^0.19.2",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "firebase": "^7.16.0",
     "history": "4.10.1",
     "match-sorter": "4.1.0",
+    "material-ui-pickers": "1.0.0-rc.9",
     "moment": "2.26.0",
     "node-sass": "4.14.1",
     "nouislider": "14.5.0",
@@ -21,11 +24,16 @@
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
     "react-jvectormap": "0.0.16",
+    "react-notification-alert": "0.0.12",
+    "react-notifications": "^1.6.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "0.13.9",
     "react-table": "7.1.0",
-    "react-tagsinput": "3.19.0"
+    "react-tagsinput": "3.19.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
